--- a/styles/general.css
+++ b/styles/general.css
@@ -19,6 +19,7 @@ table, th, td {
 
 #seleccionCampeon{
     height: 100%;
+    color: #cdbe91;
 }
 .campeon_seleccionado{
     display: flex;
@@ -49,15 +50,18 @@ table, th, td {
     min-width: 100px;
     min-height: 100px;
     z-index: 1;
-    border-image: 7px solid #5D471D;
+/*     border: 7px solid #5D471D; */
     background:linear-gradient(45deg, #c8aa6d, #7a5c29) ;
     border-radius: 100%;
     overflow: hidden; 
+    align-items: center;
+    justify-content: center;
 }
 
 .campeon-img img{
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
+    border-radius: 100%;
 }
 
 
@@ -174,7 +178,9 @@ table, th, td {
     display: flex;
     flex-direction: column;
 }
-
+#tienda .categoria{
+    color: #cdbe91;
+}
 .item-img{
     width: 48px;
 }
